@@ -1,3 +1,7 @@
+2002-10-21 garlick
+	* Added "devices" query to get mapping of devices to nodes and
+	  per-device statistics (reconnects, successful actions).
+
 2002-10-21 grondo
 	* hostlist.c : fixed bug where test matches testN
 
